2007-04-04  Alex Schroeder  <aschroeder@localhost>

	* modules/creole.pl (CreoleRule): New Table code.
	Make image within links regexp non-greedy.

2007-04-03  Alex Schroeder  <alex@gnu.org>

	* modules/creole.pl (CreoleRule): Implement Creole 0.5 table
	headers.

2007-04-03  Alex Schroeder  <aschroeder@localhost>

	* wiki.pl (ApplyRules, RSS): Add error class to error messages.
	Put the error messages on the surrounding p element, and add one,
	if it does not already exist.

2007-04-02  Alex Schroeder  <alex@gnu.org>

	* wiki.pl (GetSummary): Fix double HTML quoting for default texts.

2007-04-02  Alex Schroeder  <alex@gnu.org>

	* modules/namespaces.pl ($NamespaceSlashing): New variable.
	(NewNamespaceDoRc): Set it.
	(NewNamespaceUrlEncode): Wrapper around UrlEncode() that uses it.

2007-03-24  Alex Schroeder  <alex@gnu.org>

	* modules/live-templates.pl (LiveTemplateRule): Save $_, use
	Clean(). This should fix the clean + dirty block mess.

2007-02-22  Alex Schroeder  <aschroeder@localhost>

	* modules/sistersites.pl (DoSisterPages): Url encode the page id.

2007-02-20  Alex Schroeder  <aschroeder@localhost>

	* modules/journal-rss.pl (DoJournalRss): Protect call to
	GetKeptRevision using eval for cases where the old revision is no
	longer available.

2007-02-20  Alex Schroeder  <alex@gnu.org>

	* modules/weblog-4.pl (DoCategories): Use tabindex=1 for the title
	field, tabindex=2 for the tags field, and tabindex=3 for the
	submit button.

2007-02-19  Alex Schroeder  <alex@gnu.org>

	* wiki.pl (BannedContent): Ignore malformed regular expressions in
	on the page.

2007-02-15  Alex Schroeder  <alex@gnu.org>

	* modules/toc.pl (TocRule, TocHeadings): Accept classes for <toc>
	tag.

2007-02-14  Alex Schroeder  <aschroeder@localhost>

	* modules/index.pl (DoPrintableIndex): Added a content div around
	it all.

2007-02-13  Alex Schroeder  <aschroeder@localhost>

	* modules/creole.pl (CreoleRule, $CreoleLineBreaks): New.
	(CreoleRule): Support \\.