@@ -1,4 +1,4 @@
-# Copyright (C) 2006  Alex Schroeder <alex@emacswiki.org>
+# Copyright (C) 2006, 2007  Alex Schroeder <alex@emacswiki.org>
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -18,9 +18,32 @@
 
 require 't/test.pl';
 package OddMuse;
-use Test::More tests => 4;
+use Test::More tests => 7;
 
 clear_pages();
+
+sub get_etag {
+  my $str = shift;
+  return $1 if $str =~ /Etag: (.*)\r\n/;
+}
+
+# Get the ts from the page db and compare it to the Etag
+update_page('CacheTest', 'something');
+OpenPage('CacheTest');
+my $ts1 = $Page{ts};
+my $ts2 = get_etag(get_page('CacheTest'));
+ok(abs($ts1 - $ts2) <= 1, "Latest edit of this page: $ts1 and $ts2 are close");
+# When updating another page, that page's ts is the new Etag for all of them
+update_page('OtherPage', 'something');
+OpenPage('OtherPage');
+$ts1 = $Page{ts};
+$ts2 = get_etag(get_page('OtherPage'));
+ok(abs($ts1 - $ts2) <= 1, "Latest edit of other page: $ts1 and $ts2 are close");
+# Getting it raw should use the original timestamp
+OpenPage('CacheTest');
+$ts1 = $Page{ts};
+$ts2 = get_etag(get_page('/raw/CacheTest?'));
+ok(abs($ts1 - $ts2) <= 1, "Latest edit of raw page: $ts1 and $ts2 are close");
 
 $str = 'This is a WikiLink.';
 
